# Multiverse-Chooser

./: .gitignore  CMakeLists.txt  LICENSE  README.md  ic_multiverse.rc
skins/: default.qss  white.qss
src/: Main.cpp  MainWindow.cpp  MainWindow.hpp  PlayersChooser.cpp  PlayersChooser.hpp
translations/: compileTranslations.bat  fr_FR.qm  fr_FR.ts  generateTranslations.bat
